--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "clsx": "^2.1.1",
     "lucide-react": "^0.556.0",
     "mongoose": "^9.0.1",
+    "multer": "^2.0.2",
     "next": "16.0.8",
     "react": "19.2.1",
     "react-dom": "19.2.1",
